[package]
name = "hdwallet-filecoin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
blake2b_simd = "1.0.1"
blst = { version = "0.3.10", features = ["portable"] }
data-encoding = "2.4.0"
data-encoding-macro = "0.1.13"
#fvm_shared = "3.4.0"
#eth-keystore = "0.5.0"
hdwallet = "0.4.1"
#rand = "0.8.5"
secp256k1 = "0.26.0"
thiserror = "1.0.43"
tiny-bip39 = { version = "1.0.0", default-features = false }
#zeroize = { version = "1.6.0", features = ["std", "aarch64", "zeroize_derive"] }

[dev-dependencies]
hex-literal = "0.4.1"
