[package]
name = "hdwallet-filecoin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
base64-serde = "0.7.0"
bip39 = { version = "2.0.0", default-features = false, features = ["std"] }
blake2b_simd = "1.0.1"
blst = { version = "0.3.10", features = ["portable"] }
data-encoding = "2.4.0"
data-encoding-macro = "0.1.13"
#fvm_shared = "3.4.0"
#eth-keystore = "0.5.0"
hdwallet = "0.4.1"
hex = "0.4.3"
rand = "0.8.5"
secp256k1 = { version = "0.26.0", features = ["global-context"] }
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
thiserror = "1.0.43"
#zeroize = { version = "1.6.0", features = ["std", "aarch64", "zeroize_derive"] }

[dev-dependencies]
hdwallet-bitcoin = "0.4.1"
ibig = { version = "0.3.6", default-features = false }
