[package]
name = "hdwallet-filecoin"
version = "0.1.0"
description = "HD Wallet for Filecoin, including key generation, derivation and signing"
keywords = ["filecoin", "hdwallet", "wallet"]
authors = ["Aloxaf <aloxafx@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Aloxaf/hdwallet-filecoin"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
base64-serde = "0.7.0"
bip39 = { version = "2.0.0", default-features = false, features = ["std"] }
blake2b_simd = "1.0.2"
blst = { version = "0.3.11", features = ["portable"] }
data-encoding = "2.4.0"
data-encoding-macro = "0.1.13"
hdwallet = "0.4.1"
hex = "0.4.3"
rand = "0.8.5"
secp256k1 = { version = "0.26.0", features = ["global-context", "recovery"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.50"
zeroize = { version = "1.6.0", features = ["std", "aarch64", "zeroize_derive"] }

[dev-dependencies]
hdwallet-bitcoin = "0.4.1"
ibig = { version = "0.3.6", default-features = false }
